fix Bob rotation, and add angle

--- a/E91_ab.ipynb
+++ b/E91_ab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -21,7 +21,20 @@
     "from math import *\n",
     "import random\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import sympy as sp\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display, Math, Latex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_matrix(matrix):\n",
+    "    value = sp.latex(sp.Matrix(matrix))\n",
+    "    display(Math(value))"
    ]
   },
   {
@@ -77,110 +90,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0.70710678, -0.70710678,  0.        , -0.        ],\n",
-       "       [-0.70710678, -0.70710678, -0.        , -0.        ],\n",
-       "       [ 0.        , -0.        , -0.70710678,  0.70710678],\n",
-       "       [-0.        , -0.        ,  0.70710678,  0.70710678]])"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inequality: 2.828427124746189\n"
+     ]
     }
    ],
    "source": [
-    "M[\"ab'\"].get()"
+    "def measurement(type_A, type_B):\n",
+    "    logicQuBit = LogicQuBit(2)\n",
+    "    \n",
+    "    gates = Gates()\n",
+    "    ZZ = gates.Z().kron(gates.Z())\n",
+    "    \n",
+    "    A = Qubit()\n",
+    "    B = Qubit()\n",
+    "\n",
+    "    # generate entangled state |01>+|10>\n",
+    "    A.H()\n",
+    "    B.CNOT(A)\n",
+    "    B.X()\n",
+    "    B.Z()\n",
+    "\n",
+    "    # Alice choose the measurement\n",
+    "    if \"a'\" == type_A:\n",
+    "        A.H()\n",
+    "\n",
+    "    # Bob choose the measurement\n",
+    "    if \"b\" == type_B:\n",
+    "        B.RY(-pi/4)\n",
+    "    elif \"b'\" == type_B:\n",
+    "        B.RY(pi/4)\n",
+    "        \n",
+    "    psi = logicQuBit.getPsi()\n",
+    "    value = (psi.adjoint()*ZZ*psi).get()[0]\n",
+    "    return value\n",
+    "\n",
+    "values = {}\n",
+    "values[\"ab\"] = measurement(\"a\",\"b\")\n",
+    "values[\"a'b\"] = measurement(\"a'\",\"b\")\n",
+    "values[\"ab'\"] = measurement(\"a\",\"b'\")\n",
+    "values[\"a'b'\"] = measurement(\"a'\",\"b'\")\n",
+    "inequality = values[\"ab\"] + values[\"a'b\"] + values[\"ab'\"] - values[\"a'b'\"]\n",
+    "inequality = sqrt(inequality.real * inequality.real)\n",
+    "print(\"Inequality: \"+str(inequality))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#psi.get()"
+    "#print_matrix(((gates.Z()+gates.X())/sqrt(2)).get())\n",
+    "#print_matrix(gates.U3(1,pi/2,0,pi).get())\n",
+    "#print_matrix(gates.H().get())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 7.07106781e-01+0.00000000e+00j -7.07106781e-01+8.65956056e-17j\n",
-      "   0.00000000e+00+0.00000000e+00j -0.00000000e+00+0.00000000e+00j]\n",
-      " [-4.32978028e-17-7.07106781e-01j -1.29893408e-16-7.07106781e-01j\n",
-      "   0.00000000e+00-0.00000000e+00j  0.00000000e+00-0.00000000e+00j]\n",
-      " [ 0.00000000e+00+0.00000000e+00j -0.00000000e+00+0.00000000e+00j\n",
-      "  -7.07106781e-01+0.00000000e+00j  7.07106781e-01-8.65956056e-17j]\n",
-      " [ 0.00000000e+00-0.00000000e+00j  0.00000000e+00-0.00000000e+00j\n",
-      "   4.32978028e-17+7.07106781e-01j  1.29893408e-16+7.07106781e-01j]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "gates = Gates()\n",
-    "#rint(gates.Z(1).kron(gates.H(1)).get()) # ab\n",
-    "#print(gates.X(1).kron(gates.H(1)).get()) # a'b\n",
-    "print(gates.Z(1).kron(gates.U3(1,-pi/2,pi/2,pi)).get()) # ab'\n",
-    "#print(gates.X(1).kron(gates.U3(1,-pi/2,pi/2,pi)).get()) # a'b'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'0': (0.9238795325112866+0j), '1': (0.3826834323650897+0j)}\n",
-      "[[ 0.70710678 -0.70710678]\n",
-      " [-0.70710678 -0.70710678]]\n",
-      "[(0.8535533905932735+0j), (0.1464466094067262+0j)] [[0.70710678]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "logicQuBit = LogicQuBit(1)\n",
-    "x = Qubit()\n",
-    "#x.X()\n",
-    "\n",
-    "psi = x.getState().get()\n",
-    "x.H()\n",
-    "x.RY(pi/4)\n",
-    "print(x.getDictPsi())\n",
-    "\n",
-    "p = logicQuBit.Measure([x])\n",
-    "\n",
-    "Mt = (gates.Z()-gates.X()).get()/sqrt(2)\n",
-    "v = np.dot(np.dot(psi.transpose().conjugate(), Mt), psi)\n",
-    "\n",
-    "print(Mt)\n",
-    "print(p,v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ab': 0.11475409836065574, \"a'b\": 0.014705882352941176, \"ab'\": 0.08620689655172414, \"a'b'\": -0.015873015873015872}\n",
-      "0.23153989313833692\n"
+      "{'ab': -0.648854961832061, \"a'b\": -0.7007874015748031, \"ab'\": -0.7674418604651163, \"a'b'\": 0.7345132743362832}\n",
+      "2.851597498208264\n"
      ]
     }
    ],
@@ -221,8 +203,8 @@
     "    for i in range(attempts):\n",
     "        logicQuBit = LogicQuBit(2)\n",
     "\n",
-    "        B = Qubit()\n",
     "        A = Qubit()\n",
+    "        B = Qubit()\n",
     "\n",
     "        # generate entangled state |01>-|10>\n",
     "        A.H()\n",
@@ -232,11 +214,9 @@
     "\n",
     "        # Alice choose the measurement\n",
     "        measure_type_A = random.choice([\"a\", \"a'\"])\n",
-    "        #if \"a\" in measure_type_A:\n",
-    "            #A.Z()\n",
-    "        if \"a'\" in measure_type_A:\n",
-    "            A.X()\n",
-    "\n",
+    "        if \"a'\" == measure_type_A: # for x\n",
+    "            A.H()\n",
+    "            \n",
     "        # Alice performs the measurement\n",
     "        m_A = logicQuBit.Measure_One(A)[0]\n",
     "        m_A = to_minus_one(m_A)\n",
@@ -244,19 +224,19 @@
     "        # Eva performs the measurement\n",
     "        if eva:\n",
     "            measure_type_E = random.choice([\"b\", \"b'\"])\n",
-    "            if \"b\" in measure_type_E:\n",
-    "                B.H()\n",
-    "            elif \"b'\" in measure_type_E:\n",
-    "                B.U3(-pi/2,pi/2,pi)\n",
+    "            if \"b\" == measure_type_E:\n",
+    "                B.RY(-pi/4)\n",
+    "            elif \"b'\" == measure_type_E:\n",
+    "                B.RY(pi/4)\n",
     "            m_E = logicQuBit.Measure_One(B)[0]\n",
     "\n",
     "        # Bob choose the measurement\n",
     "        measure_type_B = random.choice([\"b\", \"b'\"])\n",
-    "        if \"b\" in measure_type_B:\n",
-    "            B.H()\n",
-    "        elif \"b'\" in measure_type_B:\n",
-    "            B.U3(-pi/2,pi/2,pi)\n",
-    "\n",
+    "        if \"b\" == measure_type_B:\n",
+    "            B.RY(-pi/4)\n",
+    "        elif \"b'\" == measure_type_B:\n",
+    "            B.RY(pi/4)\n",
+    "       \n",
     "        # Bob performs the measurement\n",
     "        m_B = logicQuBit.Measure_One(B)[0]\n",
     "        m_B = to_minus_one(m_B)\n",
@@ -268,39 +248,20 @@
     "\n",
     "measure_A, measure_B = measurements(eva=False, attempts=500)\n",
     "bell = bell_inequality(measure_A, measure_B)\n",
-    "print(bell.real)"
+    "print(bell)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[\"a'\", -1], ['a', 1], ['a', -1], ['a', 1], ['a', 1], ['a', -1], [\"a'\", 1], [\"a'\", 1], [\"a'\", -1], [\"a'\", 1]]\n",
-      "[['b', -1], [\"b'\", 1], [\"b'\", -1], [\"b'\", -1], ['b', 1], [\"b'\", 1], [\"b'\", 1], ['b', 1], ['b', -1], ['b', -1]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(measure_A[:10])\n",
-    "print(measure_B[:10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ab': -0.125, \"a'b\": 0.0, \"ab'\": 0.0, \"a'b'\": -0.07692307692307693}\n",
-      "0.04807692307692307\n"
+      "{'ab': -0.7454545454545455, \"a'b\": -0.7083333333333334, \"ab'\": -0.7272727272727273, \"a'b'\": 0.660377358490566}\n",
+      "2.8414379645511723\n"
      ]
     }
    ],
@@ -313,20 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ab': -0.043478260869565216, \"a'b\": 0.2653061224489796, \"ab'\": 0.09803921568627451, \"a'b'\": -0.07407407407407407}\n",
-      "0.393941151339763\n"
+      "{'ab': -0.4666666666666667, \"a'b\": 0.08333333333333333, \"ab'\": -0.5510204081632653, \"a'b'\": 0.06896551724137931}\n",
+      "1.0033192587379778\n"
      ]
     }
    ],
    "source": [
-    "# without eva\n",
+    "# with eva\n",
     "measure_A, measure_B = measurements(eva=True, attempts=200)\n",
     "bell = bell_inequality(measure_A, measure_B)\n",
     "print(bell)"
