--- a/E91_ab.ipynb
+++ b/E91_ab.ipynb
@@ -2,33 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cuda is not available!\n",
-      "logicqubit version 1.5.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from logicqubit.logic import *\n",
     "from math import *\n",
     "import random\n",
-    "import numpy as np\n",
-    "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display, Math, Latex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +100,7 @@
     "    A = Qubit()\n",
     "    B = Qubit()\n",
     "\n",
-    "    # generate entangled state |01>+|10>\n",
+    "    # generate entangled state |01>-|10>\n",
     "    A.H()\n",
     "    B.CNOT(A)\n",
     "    B.X()\n",
@@ -143,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,15 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ab': -0.648854961832061, \"a'b\": -0.7007874015748031, \"ab'\": -0.7674418604651163, \"a'b'\": 0.7345132743362832}\n",
-      "2.851597498208264\n"
+      "{'ab': -0.6585365853658537, \"a'b\": -0.7404580152671756, \"ab'\": -0.6134453781512605, \"a'b'\": 0.7322834645669292}\n",
+      "2.744723443351219\n"
      ]
     }
    ],
@@ -253,15 +242,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ab': -0.7454545454545455, \"a'b\": -0.7083333333333334, \"ab'\": -0.7272727272727273, \"a'b'\": 0.660377358490566}\n",
-      "2.8414379645511723\n"
+      "{'ab': -0.7021276595744681, \"a'b\": -0.7959183673469388, \"ab'\": -0.6491228070175439, \"a'b'\": 0.7021276595744681}\n",
+      "2.8492964935134184\n"
      ]
     }
    ],
@@ -274,15 +263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ab': -0.4666666666666667, \"a'b\": 0.08333333333333333, \"ab'\": -0.5510204081632653, \"a'b'\": 0.06896551724137931}\n",
-      "1.0033192587379778\n"
+      "{'ab': -0.7192982456140351, \"a'b\": 0.0, \"ab'\": -0.6153846153846154, \"a'b'\": -0.022222222222222223}\n",
+      "1.3124606387764284\n"
      ]
     }
    ],
