--- a/E91_ab_rot.ipynb
+++ b/E91_ab_rot.ipynb
@@ -42,7 +42,7 @@
     "    A = Qubit()\n",
     "    B = Qubit()\n",
     "\n",
-    "    # generate entangled state |01>+|10>\n",
+    "    # generate entangled state |01>-|10>\n",
     "    A.H()\n",
     "    B.CNOT(A)\n",
     "    B.X()\n",
