remove ZZ gate and add comments

--- a/E91_ab_rot.ipynb
+++ b/E91_ab_rot.ipynb
@@ -98,6 +98,7 @@
     "    direction = {\"ab\":0, \"a'b\":0, \"ab'\":0, \"a'b'\":0}\n",
     "    count = {\"ab\":0, \"a'b\":0, \"ab'\":0, \"a'b'\":0}\n",
     "    \n",
+    "    # Expected values for ab, a'b, ab' and a'b'\n",
     "    for a,b in zip(A,B):\n",
     "        if a[0]==\"a\" and b[0]==\"b\":\n",
     "            direction[\"ab\"] += a[1]*b[1]\n",
@@ -116,6 +117,7 @@
     "    direction[\"a'b\"] /= count[\"a'b\"]\n",
     "    direction[\"ab'\"] /= count[\"ab'\"]\n",
     "    direction[\"a'b'\"] /= count[\"a'b'\"]\n",
+    "    # Bell inequality value\n",
     "    inequality = direction[\"ab\"] + direction[\"a'b\"] + direction[\"ab'\"] - direction[\"a'b'\"]\n",
     "    inequality = sqrt(inequality * inequality)\n",
     "    return inequality\n",
