--- a/E91_ab.ipynb
+++ b/E91_ab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +55,15 @@
     "\n",
     "psi = logicQuBit.getPsi()\n",
     "\n",
+    "# Axes\n",
     "gates = Gates()\n",
     "M = {}\n",
-    "M[\"ab\"] = gates.Z().kron((gates.Z()+gates.X())/sqrt(2))\n",
-    "M[\"a'b\"] = gates.X().kron((gates.Z()+gates.X())/sqrt(2))\n",
-    "M[\"ab'\"] = gates.Z().kron((gates.Z()-gates.X())/sqrt(2))\n",
-    "M[\"a'b'\"] = gates.X().kron((gates.Z()-gates.X())/sqrt(2))\n",
-    "ZZ = gates.X().kron(gates.Z())\n",
+    "M[\"ab\"] = gates.Z().kron((gates.Z()+gates.X())/sqrt(2))   # Z and (Z+X)/sqrt(2)\n",
+    "M[\"a'b\"] = gates.X().kron((gates.Z()+gates.X())/sqrt(2))  # X and (Z+X)/sqrt(2)\n",
+    "M[\"ab'\"] = gates.Z().kron((gates.Z()-gates.X())/sqrt(2))  # Z and (Z-X)/sqrt(2)\n",
+    "M[\"a'b'\"] = gates.X().kron((gates.Z()-gates.X())/sqrt(2)) # X and (Z-X)/sqrt(2)\n",
     "\n",
+    "# Expected values for ab, a'b, ab' and a'b'\n",
     "values = {}\n",
     "values[\"ab\"] = (psi.adjoint()*M[\"ab\"]*psi).get()[0]\n",
     "values[\"a'b\"] = (psi.adjoint()*M[\"a'b\"]*psi).get()[0]\n",
@@ -72,6 +73,7 @@
     "print(logicQuBit.getDictPsi())\n",
     "print(values)\n",
     "\n",
+    "# Bell inequality value\n",
     "inequality = values[\"ab\"] + values[\"a'b\"] + values[\"ab'\"] - values[\"a'b'\"]\n",
     "inequality = sqrt(inequality.real * inequality.real)\n",
     "print(\"Inequality: \"+str(inequality))"
@@ -161,6 +163,7 @@
     "    direction = {\"ab\":0, \"a'b\":0, \"ab'\":0, \"a'b'\":0}\n",
     "    count = {\"ab\":0, \"a'b\":0, \"ab'\":0, \"a'b'\":0}\n",
     "    \n",
+    "    # Expected values for ab, a'b, ab' and a'b'\n",
     "    for a,b in zip(A,B):\n",
     "        if a[0]==\"a\" and b[0]==\"b\":\n",
     "            direction[\"ab\"] += a[1]*b[1]\n",
@@ -179,6 +182,7 @@
     "    direction[\"a'b\"] /= count[\"a'b\"]\n",
     "    direction[\"ab'\"] /= count[\"ab'\"]\n",
     "    direction[\"a'b'\"] /= count[\"a'b'\"]\n",
+    "    # Bell inequality value\n",
     "    inequality = direction[\"ab\"] + direction[\"a'b\"] + direction[\"ab'\"] - direction[\"a'b'\"]\n",
     "    inequality = sqrt(inequality * inequality)\n",
     "    print(direction)\n",
