rename files add E91 with key generation

--- a/E91_ab.ipynb
+++ b/E91_ab.ipynb
@@ -2,22 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuda is not available!\n",
+      "logicqubit version 1.5.6\n"
+     ]
+    }
+   ],
    "source": [
     "from logicqubit.logic import *\n",
     "from math import *\n",
     "import random\n",
+    "import operator\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display, Math, Latex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,162 +38,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'00': 0j, '01': (0.7071067811865475+0j), '10': (-0.7071067811865475+0j), '11': 0j}\n",
-      "{'ab': array([-0.70710678+0.j]), \"a'b\": array([-0.70710678+0.j]), \"ab'\": array([-0.70710678+0.j]), \"a'b'\": array([0.70710678+0.j])}\n",
-      "Inequality: 2.8284271247461894\n"
+      "{'a3b1': 0.03333333333333333, 'a1b1': -0.8333333333333334, 'a3b3': -1.0, 'a1b3': 0.6981132075471698}\n",
+      "2.4981132075471697\n"
      ]
     }
    ],
    "source": [
-    "logicQuBit = LogicQuBit(2)\n",
-    "\n",
-    "B = Qubit()\n",
-    "A = Qubit()\n",
-    "\n",
-    "# generate entangled state |01>-|10>\n",
-    "A.H()\n",
-    "B.CNOT(A)\n",
-    "B.X()\n",
-    "B.Z()\n",
-    "\n",
-    "psi = logicQuBit.getPsi()\n",
-    "\n",
-    "# Axes\n",
-    "gates = Gates()\n",
-    "M = {}\n",
-    "M[\"ab\"] = gates.Z().kron((gates.Z()+gates.X())/sqrt(2))   # Z and (Z+X)/sqrt(2)\n",
-    "M[\"a'b\"] = gates.X().kron((gates.Z()+gates.X())/sqrt(2))  # X and (Z+X)/sqrt(2)\n",
-    "M[\"ab'\"] = gates.Z().kron((gates.Z()-gates.X())/sqrt(2))  # Z and (Z-X)/sqrt(2)\n",
-    "M[\"a'b'\"] = gates.X().kron((gates.Z()-gates.X())/sqrt(2)) # X and (Z-X)/sqrt(2)\n",
-    "\n",
-    "# Expected values for ab, a'b, ab' and a'b'\n",
-    "values = {}\n",
-    "values[\"ab\"] = (psi.adjoint()*M[\"ab\"]*psi).get()[0]\n",
-    "values[\"a'b\"] = (psi.adjoint()*M[\"a'b\"]*psi).get()[0]\n",
-    "values[\"ab'\"] = (psi.adjoint()*M[\"ab'\"]*psi).get()[0]\n",
-    "values[\"a'b'\"] = (psi.adjoint()*M[\"a'b'\"]*psi).get()[0]\n",
-    "\n",
-    "print(logicQuBit.getDictPsi())\n",
-    "print(values)\n",
-    "\n",
-    "# Bell inequality value\n",
-    "inequality = values[\"ab\"] + values[\"a'b\"] + values[\"ab'\"] - values[\"a'b'\"]\n",
-    "inequality = sqrt(inequality.real * inequality.real)\n",
-    "print(\"Inequality: \"+str(inequality))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inequality: 2.828427124746189\n"
-     ]
-    }
-   ],
-   "source": [
-    "def measurement(type_A, type_B):\n",
-    "    logicQuBit = LogicQuBit(2)\n",
-    "    \n",
-    "    gates = Gates()\n",
-    "    ZZ = gates.Z().kron(gates.Z())\n",
-    "    \n",
-    "    A = Qubit()\n",
-    "    B = Qubit()\n",
-    "\n",
-    "    # generate entangled state |01>-|10>\n",
-    "    A.H()\n",
-    "    B.CNOT(A)\n",
-    "    B.X()\n",
-    "    B.Z()\n",
-    "\n",
-    "    # Alice choose the measurement\n",
-    "    if \"a'\" == type_A:\n",
-    "        A.H()\n",
-    "\n",
-    "    # Bob choose the measurement\n",
-    "    if \"b\" == type_B:\n",
-    "        B.RY(-pi/4)\n",
-    "    elif \"b'\" == type_B:\n",
-    "        B.RY(pi/4)\n",
-    "        \n",
-    "    psi = logicQuBit.getPsi()\n",
-    "    value = (psi.adjoint()*ZZ*psi).get()[0]\n",
-    "    return value\n",
-    "\n",
-    "values = {}\n",
-    "values[\"ab\"] = measurement(\"a\",\"b\")\n",
-    "values[\"a'b\"] = measurement(\"a'\",\"b\")\n",
-    "values[\"ab'\"] = measurement(\"a\",\"b'\")\n",
-    "values[\"a'b'\"] = measurement(\"a'\",\"b'\")\n",
-    "inequality = values[\"ab\"] + values[\"a'b\"] + values[\"ab'\"] - values[\"a'b'\"]\n",
-    "inequality = sqrt(inequality.real * inequality.real)\n",
-    "print(\"Inequality: \"+str(inequality))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print_matrix(((gates.Z()+gates.X())/sqrt(2)).get())\n",
-    "#print_matrix(gates.U3(1,pi/2,0,pi).get())\n",
-    "#print_matrix(gates.H().get())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ab': -0.6585365853658537, \"a'b\": -0.7404580152671756, \"ab'\": -0.6134453781512605, \"a'b'\": 0.7322834645669292}\n",
-      "2.744723443351219\n"
-     ]
-    }
-   ],
-   "source": [
-    "# |<C>| = |<a.b> + <a'.b> + <a.b'> - <a'.b'>| <= 2\n",
+    "# |<C>| = |<a3b1> + <a1b1> + <a3b3> - <a1b3>| <= 2 for classic systems\n",
     "def bell_inequality(A, B):\n",
-    "    direction = {\"ab\":0, \"a'b\":0, \"ab'\":0, \"a'b'\":0}\n",
-    "    count = {\"ab\":0, \"a'b\":0, \"ab'\":0, \"a'b'\":0}\n",
+    "    direction = {\"a3b1\":0, \"a1b1\":0, \"a3b3\":0, \"a1b3\":0}\n",
+    "    count = {\"a3b1\":0, \"a1b1\":0, \"a3b3\":0, \"a1b3\":0}\n",
     "    \n",
-    "    # Expected values for ab, a'b, ab' and a'b'\n",
+    "    # Expected values for a3b1, a1b1, a3b3 and a1b3\n",
     "    for a,b in zip(A,B):\n",
-    "        if a[0]==\"a\" and b[0]==\"b\":\n",
-    "            direction[\"ab\"] += a[1]*b[1]\n",
-    "            count[\"ab\"] += 1\n",
-    "        elif a[0]==\"a'\" and b[0]==\"b\":\n",
-    "            direction[\"a'b\"] += a[1]*b[1]\n",
-    "            count[\"a'b\"] += 1\n",
-    "        elif a[0]==\"a\" and b[0]==\"b'\":\n",
-    "            direction[\"ab'\"] += a[1]*b[1]\n",
-    "            count[\"ab'\"] += 1\n",
-    "        elif a[0]==\"a'\" and b[0]==\"b'\":\n",
-    "            direction[\"a'b'\"] += a[1]*b[1]\n",
-    "            count[\"a'b'\"] += 1\n",
+    "        if a[0]==\"a3\" and b[0]==\"b1\":\n",
+    "            direction[\"a3b1\"] += a[1]*b[1]\n",
+    "            count[\"a3b1\"] += 1\n",
+    "        elif a[0]==\"a1\" and b[0]==\"b1\":\n",
+    "            direction[\"a1b1\"] += a[1]*b[1]\n",
+    "            count[\"a1b1\"] += 1\n",
+    "        elif a[0]==\"a3\" and b[0]==\"b3\":\n",
+    "            direction[\"a3b3\"] += a[1]*b[1]\n",
+    "            count[\"a3b3\"] += 1\n",
+    "        elif a[0]==\"a1\" and b[0]==\"b3\":\n",
+    "            direction[\"a1b3\"] += a[1]*b[1]\n",
+    "            count[\"a1b3\"] += 1\n",
     "\n",
-    "    direction[\"ab\"] /= count[\"ab\"]\n",
-    "    direction[\"a'b\"] /= count[\"a'b\"]\n",
-    "    direction[\"ab'\"] /= count[\"ab'\"]\n",
-    "    direction[\"a'b'\"] /= count[\"a'b'\"]\n",
+    "    direction[\"a3b1\"] /= count[\"a3b1\"]\n",
+    "    direction[\"a1b1\"] /= count[\"a1b1\"]\n",
+    "    direction[\"a3b3\"] /= count[\"a3b3\"]\n",
+    "    direction[\"a1b3\"] /= count[\"a1b3\"]\n",
     "    # Bell inequality value\n",
-    "    inequality = direction[\"ab\"] + direction[\"a'b\"] + direction[\"ab'\"] - direction[\"a'b'\"]\n",
+    "    inequality = direction[\"a3b1\"] + direction[\"a1b1\"] + direction[\"a3b3\"] - direction[\"a1b3\"]\n",
     "    inequality = sqrt(inequality * inequality)\n",
     "    print(direction)\n",
     "    return inequality\n",
@@ -206,9 +99,11 @@
     "        B.Z()\n",
     "\n",
     "        # Alice choose the measurement\n",
-    "        measure_type_A = random.choice([\"a\", \"a'\"])\n",
-    "        if \"a'\" == measure_type_A: # for x\n",
+    "        measure_type_A = random.choice([\"a1\", \"a2\", \"a3\"])\n",
+    "        if \"a1\" == measure_type_A: # for x\n",
     "            A.H()\n",
+    "        elif \"a3\" == measure_type_A:\n",
+    "            A.RY(pi/4)\n",
     "            \n",
     "        # Alice performs the measurement\n",
     "        m_A = logicQuBit.Measure_One(A)[0]\n",
@@ -216,18 +111,18 @@
     "\n",
     "        # Eva performs the measurement\n",
     "        if eva:\n",
-    "            measure_type_E = random.choice([\"b\", \"b'\"])\n",
-    "            if \"b\" == measure_type_E:\n",
+    "            measure_type_E = random.choice([\"b1\", \"b2\", \"b3\"])\n",
+    "            if \"b1\" == measure_type_E:\n",
     "                B.RY(-pi/4)\n",
-    "            elif \"b'\" == measure_type_E:\n",
+    "            elif \"b3\" == measure_type_E:\n",
     "                B.RY(pi/4)\n",
     "            m_E = logicQuBit.Measure_One(B)[0]\n",
     "\n",
     "        # Bob choose the measurement\n",
-    "        measure_type_B = random.choice([\"b\", \"b'\"])\n",
-    "        if \"b\" == measure_type_B:\n",
+    "        measure_type_B = random.choice([\"b1\", \"b2\", \"b3\"])\n",
+    "        if \"b1\" == measure_type_B:\n",
     "            B.RY(-pi/4)\n",
-    "        elif \"b'\" == measure_type_B:\n",
+    "        elif \"b3\" == measure_type_B:\n",
     "            B.RY(pi/4)\n",
     "       \n",
     "        # Bob performs the measurement\n",
@@ -246,44 +141,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perform_measurements(eva = False, attempts=200):\n",
+    "    to_plus_one = lambda x: 0 if x == -1 else x\n",
+    "\n",
+    "    measure_A, measure_B = measurements(eva=eva, attempts=attempts)\n",
+    "\n",
+    "    # incompatible measures are shared and used to calculate bell inequality\n",
+    "    shared_measures_A = []\n",
+    "    shared_measures_B = []\n",
+    "\n",
+    "    # compatible measures will not be shared\n",
+    "    unshared_measures_A = [] \n",
+    "    unshared_measures_B = []\n",
+    "\n",
+    "    # shared measures and types of measures are public information\n",
+    "    for A,B in zip(measure_A,measure_B):\n",
+    "        if (A[0] == 'a3' and B[0] == 'b2') or (A[0] == 'a2' and B[0] == 'b1'):\n",
+    "            unshared_measures_A.append(A)\n",
+    "            unshared_measures_B.append(B)\n",
+    "        else:\n",
+    "            shared_measures_A.append(A)\n",
+    "            shared_measures_B.append(B)\n",
+    "\n",
+    "    bell = bell_inequality(shared_measures_A, shared_measures_B)\n",
+    "    print(bell)\n",
+    "    if bell > 2:\n",
+    "        key_A = [to_plus_one(measure[1]) for measure in unshared_measures_A]\n",
+    "        key_B = [int(not to_plus_one(measure[1])) for measure in unshared_measures_B]\n",
+    "        print(key_A)\n",
+    "        print(key_B)\n",
+    "    else:\n",
+    "        print(\"untrusted key!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ab': -0.7021276595744681, \"a'b\": -0.7959183673469388, \"ab'\": -0.6491228070175439, \"a'b'\": 0.7021276595744681}\n",
-      "2.8492964935134184\n"
+      "{'a3b1': -0.42857142857142855, 'a1b1': -0.4666666666666667, 'a3b3': -1.0, 'a1b3': 0.6153846153846154}\n",
+      "2.5106227106227106\n",
+      "[0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0]\n"
      ]
     }
    ],
    "source": [
     "# without eva\n",
-    "measure_A, measure_B = measurements(eva=False, attempts=200)\n",
-    "bell = bell_inequality(measure_A, measure_B)\n",
-    "print(bell)"
+    "perform_measurements(eva = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ab': -0.7192982456140351, \"a'b\": 0.0, \"ab'\": -0.6153846153846154, \"a'b'\": -0.022222222222222223}\n",
-      "1.3124606387764284\n"
+      "{'a3b1': -0.42857142857142855, 'a1b1': 0.0, 'a3b3': -0.6, 'a1b3': -0.14285714285714285}\n",
+      "0.8857142857142857\n",
+      "untrusted key!\n"
      ]
     }
    ],
    "source": [
     "# with eva\n",
-    "measure_A, measure_B = measurements(eva=True, attempts=200)\n",
-    "bell = bell_inequality(measure_A, measure_B)\n",
-    "print(bell)"
+    "perform_measurements(eva = True)"
    ]
   },
   {
