--- a/E91_ab.ipynb
+++ b/E91_ab.ipynb
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a3b1': 0.03333333333333333, 'a1b1': -0.8333333333333334, 'a3b3': -1.0, 'a1b3': 0.6981132075471698}\n",
-      "2.4981132075471697\n"
+      "{'a3b1': -0.7966101694915254, 'a1b1': -0.7777777777777778, 'a3b3': -0.8148148148148148, 'a1b3': 0.6896551724137931}\n",
+      "3.0788579344979112\n"
      ]
     }
    ],
@@ -102,8 +102,8 @@
     "        measure_type_A = random.choice([\"a1\", \"a2\", \"a3\"])\n",
     "        if \"a1\" == measure_type_A: # for x\n",
     "            A.H()\n",
-    "        elif \"a3\" == measure_type_A:\n",
-    "            A.RY(pi/4)\n",
+    "        elif \"a2\" == measure_type_A:\n",
+    "            A.RY(-pi/4)\n",
     "            \n",
     "        # Alice performs the measurement\n",
     "        m_A = logicQuBit.Measure_One(A)[0]\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,55 +168,63 @@
     "            shared_measures_B.append(B)\n",
     "\n",
     "    bell = bell_inequality(shared_measures_A, shared_measures_B)\n",
-    "    print(bell)\n",
+    "    key_A = None\n",
+    "    key_B = None\n",
     "    if bell > 2:\n",
     "        key_A = [to_plus_one(measure[1]) for measure in unshared_measures_A]\n",
     "        key_B = [int(not to_plus_one(measure[1])) for measure in unshared_measures_B]\n",
-    "        print(key_A)\n",
-    "        print(key_B)\n",
     "    else:\n",
-    "        print(\"untrusted key!\")"
+    "        print(\"untrusted key!\")\n",
+    "    return key_A, key_B, bell, zip(unshared_measures_A, unshared_measures_B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a3b1': -0.42857142857142855, 'a1b1': -0.4666666666666667, 'a3b3': -1.0, 'a1b3': 0.6153846153846154}\n",
-      "2.5106227106227106\n",
-      "[0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]\n",
-      "[0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0]\n"
+      "{'a3b1': -0.5454545454545454, 'a1b1': -0.8181818181818182, 'a3b3': -0.8333333333333334, 'a1b3': 0.7391304347826086}\n",
+      "Bell inequality: 2.9361001317523057\n",
+      "[1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0]\n",
+      "[1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0]\n"
      ]
     }
    ],
    "source": [
     "# without eva\n",
-    "perform_measurements(eva = False)"
+    "key_A, key_B, bell, _ = perform_measurements(eva = False)\n",
+    "print(\"Bell inequality: \"+str(bell))\n",
+    "print(key_A)\n",
+    "print(key_B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a3b1': -0.42857142857142855, 'a1b1': 0.0, 'a3b3': -0.6, 'a1b3': -0.14285714285714285}\n",
-      "0.8857142857142857\n",
-      "untrusted key!\n"
+      "{'a3b1': -0.7391304347826086, 'a1b1': 0.18181818181818182, 'a3b3': -0.6666666666666666, 'a1b3': -0.05263157894736842}\n",
+      "untrusted key!\n",
+      "Bell inequality: 1.171347340683725\n",
+      "None\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "# with eva\n",
-    "perform_measurements(eva = True)"
+    "key_A, key_B, bell, _ = perform_measurements(eva = True)\n",
+    "print(\"Bell inequality: \"+str(bell))\n",
+    "print(key_A)\n",
+    "print(key_B)"
    ]
   },
   {
