--- a/vqe h2.ipynb
+++ b/vqe h2.ipynb
@@ -23,7 +23,26 @@
    "source": [
     "See https://arxiv.org/abs/1304.3061\n",
     "\n",
-    "10.1103/PhysRevX.6.031007"
+    "10.1103/PhysRevX.6.031007\n",
+    "\n",
+    "Second Quantized Hamiltonian\n",
+    "\\begin{eqnarray*}\n",
+    "    \\mathcal{H}(r)=h_0 + \\sum_{ij} h_{ij}(r) a^{\\dagger}_i a_j +\\frac{1}{2} \\sum_{ijkl} h_{ijkl}(r) a^{\\dagger}_i a^{\\dagger}_ja_la_k\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "\\begin{eqnarray*}\n",
+    "    h_{ij}(r)=\\int{d\\mathbf{r}}\\,\\chi^*_i(\\mathbf{r})\\left(-\\frac{1}{2}\\nabla^2-\\sum_{a}{\\frac{Z_a}{\\mathbf{r}_{a,\\mathbf{r}}}}\\right)\\chi_j(\\mathbf{r})\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "\\begin{eqnarray*}\n",
+    "    h_{ijkl}(r)=\\int{d\\mathbf{r_1}\\,d\\mathbf{r_2}}\\,\\chi^*_i(\\mathbf{r_1})\\chi^*_j(\\mathbf{r_2})r_{1,2}^{-1}\\chi_k(\\mathbf{r_1})\\chi_l(\\mathbf{r_2})\n",
+    "\\end{eqnarray*}\n",
+    "\n",
+    "Jordan-Wigner transformation\n",
+    "\\begin{eqnarray*}\n",
+    "    a^{\\dagger} = I^{\\otimes j-1}\\otimes \\sigma_{-} \\otimes \\sigma_{z}^{\\otimes N-j}\\\\\n",
+    "    a = I^{\\otimes j-1}\\otimes \\sigma_{+} \\otimes \\sigma_{z}^{\\otimes N-j}\n",
+    "\\end{eqnarray*}"
    ]
   },
   {
